--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/DheerajJoshi/Downloads/mysql-connector-java-8.0.16/mysql-connector-java-8.0.16"/>
 	<classpathentry kind="src" path="js-assignment-master"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="js-assignment-master/JAVA 17th May Assignment/Excercise1.java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
